# LFP_1S2026_202307764

./: CMakeLists.txt  README.md  Reporte1_Tablero.html  Reporte2_Carga.html  Reporte3_Errores.html
examples/: test1.task  test10.task  test2.task  test3.task  test4.task  test5.task  test6.task  test7.task  test9.task
src/: ErrorManager.h  LexicalAnalyzer.cpp  LexicalAnalyzer.h  MainWindow.cpp  MainWindow.h  ReportGenerator.cpp  ReportGenerator.h  SyntaxAnalyzer.cpp  SyntaxAnalyzer.h  Token.h  main.cpp
tests/: prueba1.task  prueba2.task  test10_borde_comas.task  test3_err_lex_chars.task  test4_err_lex_cadenas.task  test5_err_sin_llaves.task  test6_err_sin_estructura.task  test7_err_sin_atributos.task  test8_mult_errores.task  test9_borde_vacio.task
